--- a/app/views/super_admin/application/_navigation.html.erb
+++ b/app/views/super_admin/application/_navigation.html.erb
@@ -23,7 +23,7 @@ as defined by the routes in the `admin/` namespace
     <div class="flex mx-4 mb-4 border-slate-100 border-b py-6">
       <%= link_to image_tag('/brand-assets/logo_thumbnail.svg', alt: 'Chatwoot-N Admin Dashboard', class: 'h-10'), super_admin_root_url %>
       <div class="flex flex-col ml-3">
-        <div class="text-sm">Chatwoot-N <%= Chatwoot.config[:version] %></div>
+        <b><div class="text-sm">LetsChat <%= Chatwoot.config[:version] %></div></b>
         <div class="text-xs text-slate-700 mt-0.5">Super Admin Console</div>
       </div>
     </div>
